trying to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -349,9 +349,7 @@ h6,
 hr,
 figure,
 p,
-pre {
-  margin: 0;
-}
+
 fieldset {
   margin: 0;
   padding: 0;
